# playground-template

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  Makefile  README.md  environment-cfg.yml  mkdocs.yml  repo-cmds.py  requirements.wrspc.txt  west.yml
.github/workflows/: checkin-tests.yml  docker-image-builder.yml  pages.yml
.west/: config
ci-docker-images/ubuntu/: docker_wrapper_extensions.py
ci-docker-images/ubuntu/Docker/: Dockerfile  entrypoint.sh
ci-docker-images/ubuntu/Docker/install/: ubuntu2204_install_llvm.sh  ubuntu_install_cmake_source.sh  ubuntu_install_core.sh  ubuntu_install_make_source.sh  ubuntu_install_python_package.sh
cmake/: chroot.cmake
docs/: CMakeLists.txt  index.md
libs/: CMakeLists.txt  README.md
llm-tools/: CMakeLists.txt  README.md
workspace/: CMakeLists.txt  README.md  pyvenv-setup.cmake  requirements.docs.txt  requirements.jupyter.txt
